--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   docker-cycle:
     runs-on: ubuntu-latest
+    timeout-minutes: 290
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
